--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.JustMessenger">
         <activity android:name=".UsersActivity"></activity>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".SignUpActivity">
+        <activity android:name=".SignupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
