Сделал вывод username юзеров с помощью GroupieAdapter.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database-ktx'
+
+    // Groupie adapter
+    
+    implementation "com.xwray:groupie:2.9.0"
+    implementation "com.xwray:groupie-viewbinding:2.9.0"
 }
