--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.JustMessenger.NoActionBar">
-        <activity android:name=".chat.ChatActivity"></activity>
-        <activity android:name=".UsersActivity">
+        android:theme="@style/Theme.JustMessenger.ActionBar"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".LatestMessagesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".chat.ChatActivity" />
+        <activity android:name=".NewMessageActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignupActivity" />
     </application>
